Left-align ordered lists and fix list-style-type

--- a/style.css
+++ b/style.css
@@ -27,13 +27,29 @@ h2 {
 ul, ol {
     display: table;
     margin: auto;
-    list-style-type: square;
     padding-right: 10px;
     color: black;
     font-size: 20px;
 }
 
+ul {
+    list-style-type: square;
+}
+
+ol {
+    text-align: center;
+}
+
+ol li {
+    text-align: left;
+}
+
+p {
+    font-size: 18px;
+}
+
 li {
     padding-left: 5px;
     padding-bottom: 15px;
+    font-size: 18px;
 }
